--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -116,6 +116,28 @@
   top: calc(100% + 10px);
   margin: 0;
 }
+/* ====== ERROS ====== */
+.form__input-error {
+  display: none;
+  font-size: 12px;
+  color: red;
+}
+
+.form__input_type_error {
+  border-color: red;
+  border-bottom-width: 2px;
+}
+
+.form__input-error_active {
+  display: block;
+  color: red;
+  font-size: 12px;
+}
+
+.form__button_disabled {
+  opacity: 0.2;
+  cursor: not-allowed;
+}
 
 @media screen and (max-width: 544px) {
   .popup {
