--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -117,7 +117,7 @@
   margin: 0;
 }
 /* ====== ERROS ====== */
-.form__input--error {
+.form--input-error {
   display: none;
   font-size: 12px;
   color: red;
