--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -11,7 +11,8 @@
   display: none;
 }
 
-.popup__button {
+.popup__button,
+.popup__confirm-button {
   width: 100%;
   height: 50px;
   font-size: 18px;
@@ -140,8 +141,48 @@
   cursor: not-allowed;
 }
 
+.popup__delete {
 
 
+  width: 358px;
+  height: 23px;
+
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: #000000;
+
+
+}
+
+
+#delete-confirmation-popup {
+  position: absolute;
+  width: 430px;
+  height: 181px;
+  left: 425px;
+  top: 270px;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+
+}
+
+.popup__confirm-button {
+  /* Submit Button */
+
+  /* position: absolute; */
+  width: 358px;
+  height: 50px;
+  left: 461px;
+  top: 365px;
+
+
+}
 
 @media screen and (max-width: 544px) {
   .popup {
